# kubcoin

./: Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: static.yml
doc/: conventions.md  idea.md  iteration2-report.md  tasklist.md  theme-changes.md  vision.md  workflow.md
src/: handler.rs  html.rs  i18n.rs  i18n_provider.rs  i18n_types.rs  main.rs
src/html/: button.rs  icon.rs  language_switcher.rs  navbar.rs
src/i18n/: content.rs  mod.rs  provider.rs  types.rs
static/: content.yaml  robots.txt  sitemap.xml  yandex_bc389150b2accc4c.html
static/i18n/: en.yaml  ru.yaml
