[package]
name = "kubcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys = "0.3.81"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "time"] }
tracing-web = "0.1.3"
wasm-bindgen = "0.2.104"
web-sys = "0.3.81"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
