[package]
name = "kubcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys = "0.3.81"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "time"] }
tracing-web = "0.1.3"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["Navigator", "Window", "Storage", "HtmlElement", "Document"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[profile.release]
# Optimize for size
opt-level = "z"     # Optimize for size instead of speed
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization with single codegen unit
strip = true        # Strip debug symbols
panic = "abort"     # Reduce panic handling code size
